# ai-sdk

./: .gitignore  .mailmap  404.html  CHANGELOG.md  CNAME  LICENSE  README.md  RELEASE.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml  upload-to-pypi-on-release.yml
PR_CHECKLIST/: index.html
RELEASE_NOTES_TEMPLATE/: index.html
contributing/: index.html
docs/: PR_CHECKLIST.md  README.md  RELEASE_NOTES_TEMPLATE.md  contributing.md  getting-started.md  index.md  provider_adapters.md  sdk-contract.md  sdk_contract.md  sdk_principles.md  usage.md
examples/: generate_example.py  stream_example.py
getting-started/: index.html
imrabo_ai_sdk/: __init__.py  errors.py  normalize.py  validate.py
imrabo_ai_sdk/core/: generate.py  stream.py
imrabo_ai_sdk/providers/: generic_url.py  ollama.py
provider_adapters/: index.html
sdk-contract/: index.html
sdk_contract/: index.html
sdk_principles/: index.html
search/: search_index.json
src/: capabilities.py  errors.py  types.py  validate.py
src/config/: resolve_provider.py
src/core/: generate.py  stream.py
src/imrabo_ai_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/providers/: generic_url.py  kernel.py  registry.py
src/transport/: http.py
tests/core/: test_generate_and_stream.py  test_validate.py
tests/integration/: test_streaming_parity.py
tests/providers/: test_generic_url.py  test_kernel.py  test_ollama.py  test_registry.py
usage/: index.html
