[project]
name = "imrabo-ai-sdk"
version = "1.0.0"
description = "imrabo AI SDK — provider-agnostic invocation layer (Python)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ImRabo" }]
keywords = ["ai", "sdk", "models", "inference"]

dependencies = ["httpx>=0.24.0"]

[project.optional-dependencies]
docs = ["mkdocs", "mkdocs-material"]

[tool.pytest]
addopts = ["-q"]
